--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="./images/favicon.png">
 	</head>
 	<body class="is-preload">
 
@@ -18,8 +19,6 @@
 				<header>
 					<span class="image avatar"><img src="images/kk_headshot.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Katerina Kreibich</a></h1>
-					<p>I enjoy solving problems<br />
-					through code.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -31,9 +30,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+						<li><a href="https://github.com/Code-rina" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/katerina-kreibich-7a79a251/" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://angel.co/u/code-rina" class="icon brands fa-angellist" target="_blank" rel="noopener noreferrer"><span class="label">AngelList</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -45,7 +44,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section>
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -60,16 +59,16 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="one">
 								<div class="container">
 									<h3>About Me</h3>
 									<p>I'm a software engineer who is passionate about working 
 										on projects that improve people's quality of life and 
 										make a difference. I love problem solving so when 
 										I am not working on a project, you will find me debugging.
-										When I am not coding, you can find me in the nature either 
-										camping or on the beach playing with my dog. I also enjoy 
-										photography and love capturing any moment into a digital form. </p>
+										When I am not coding, you can find me on the beach playing 
+										with my dog or doing yoga. I also enjoy photography and 
+										love capturing any moment into a digital form. </p>
 									<!-- <ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -82,30 +81,93 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="two">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Education & Experience</h3>
+									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://t4.ftcdn.net/jpg/02/09/90/27/240_F_209902781_ckfIW19o7zcwRvO6giRUZOHVv2rbv3SO.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Institute of Hospitality Management, Prague, Czech Republic</h4>
+												<p>2008 - 2012</p>
+												<p>Bachelor of Science, Hospitality Management</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://cdn-icons-png.flaticon.com/512/189/189468.png" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Various Hospitality Management and Sales positions</h4>
+												<p>2012 - 2021</p>
+												<p>Worked for luxury hotel brands organizing events which taught me to execute under pressure and work in a team. I also worked in Sales for Marriott where I was able to use my problem solving and communication skills.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://cdn-icons-png.flaticon.com/512/2913/2913185.png" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>App Academy</h4>
+												<p>2021 - 2022</p>
+												<p>Full Stack Web Development</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+							<section id="three">
+								<div class="container">
+									<h3>Full Stack Projects</h3>
+									<div class="features">
+										<article>
+											<a href="https://apptravelgram.herokuapp.com/" class="image" target="_blank" rel="noopener noreferrer"><img src="images/travelgram.png" alt="" /></a>
+											<div class="inner">
+												<h4>Travelgram</h4>
+												<p>Travelgram is an Instagram inspired appication. It is a social media platform where users can share their posts from their adventures and follow their friends.</p>
+												<p>React / Redux / Flask</p>
+												<h5>Github</h5>
+												<a href="https://apptravelgram.herokuapp.com/">apptravelgram.herokuapp.com/</a>
+												<p></p>
+												<h5>Live</h5>
+												<a href="https://github.com/Code-rina/Travelgram">github.com/Code-rina/Travelgram</a>
+											</div>
+										</article>
+										<article>
+											<a href="https://appmoodify.herokuapp.com/" class="image" target="_blank" rel="noopener noreferrer"><img src="images/moodify.png" alt="" /></a>
+											<div class="inner">
+												<h4>Moodify</h4>
+												<p>Moodify is a Spotify inspired application where users can listen to favorite playlists based on their mood.</p>
+												<p>React / Redux / Flask</p>
+												<h5>Github</h5>
+												<a href="https://appmoodify.herokuapp.com/">appmoodify.herokuapp.com/</a>
+												<p></p>
+												<h5>Live</h5>
+												<a href="https://github.com/sbyri97/moodify_gp10">github.com/sbyri97/moodify_gp10</a>
+											</div>
+										</article>
+										<article>
+											<a href="https://bnbsf.herokuapp.com/" class="image" target="_blank" rel="noopener noreferrer"><img src="images/bnbSF.png" alt="" /></a>
+											<div class="inner">
+												<h4>bnbSF</h4>
+												<p>BnBSF is an Airbnb influenced app. It is a booking place for people where they can rent a home instead of a hotel for more unique and home-like experience.</p>
+												<p>React / Redux / Express</p>
+												<h5>Github</h5>
+												<a href="https://bnbsf.herokuapp.com/">bnbsf.herokuapp.com/</a>
+												<p></p>
+												<h5>Live</h5>
+												<a href="https://github.com/code-rina/BnB_SF-Week_16_Solo_Project">github.com/code-rina/BnB_SF-Week_16_Solo_Project</a>
+											</div>
+										</article>
+										<article>
+											<a href="https://good-movies-13.herokuapp.com/" class="image" target="_blank" rel="noopener noreferrer"><img src="images/good_movies.png" alt="" /></a>
+											<div class="inner">
+												<h4>goodMovies</h4>
+												<p>goodMovies, a goodReads clone, is a movie database platform, where users can discover new movies by genre. Users can rate, and leave comments about their favorite movies.</p>
+												<p>Javascript / Pug / Express</p>
+												<h5>Github</h5>
+												<a href="https://github.com/BrandonCope/g13_goodMovies">github.com/BrandonCope/g13_goodMovies</a>
+												<p></p>
+												<h5>Live</h5>
+												<a href="https://good-movies-13.herokuapp.com/">good-movies-13.herokuapp.com</a>
 											</div>
 										</article>
 									</div>
@@ -116,21 +178,21 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<p>Looking for a software engineer? Here I am.</p>
+									<div class="container_contacts">
+									<div class="container_ctcs">
+										<h4 class="container_h5">Call Me</h5>
+										<p>415-728-7658</p>
+									</div>
+									<div class="container_ctcs">
+										<h4 class="container_h5">Location</h5>
+										<p>San Francisco, California</p>
+									</div>
+									<div class="container_ctcs">
+										<h4 class="container_h5">Email Me</h5>
+										<p>katerina.kreibich@gmail.com</p>
+									</div>	
+									</div>
 								</div>
 							</section>
 
@@ -471,7 +533,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Copyright 2022 - All Rights Reserved</li>
 							</ul>
 						</div>
 					</section>
