--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Looking for a software engineer? Here I am.</p>
+									<p></p>
+									<a class="resume" href="https://drive.google.com/file/d/19SZUfr7i9MmVS8xCo7NJOc7-SHgxNfcb/view?usp=sharing">•Resume•</a>
+									<p></p>
 									<div class="container_contacts">
 									<div class="container_ctcs">
 										<h4 class="container_h5">Call Me</h5>
