--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									<h3>Contact Me</h3>
 									<p>Looking for a software engineer? Here I am.</p>
 									<p></p>
-									<a class="resume" href="https://drive.google.com/file/d/19SZUfr7i9MmVS8xCo7NJOc7-SHgxNfcb/view?usp=sharing">•Resume•</a>
+									<a class="resume" href="https://drive.google.com/file/d/19SZUfr7i9MmVS8xCo7NJOc7-SHgxNfcb/view?usp=sharing" target="_blank" rel="noopener noreferrer">•Resume•</a>
 									<p></p>
 									<div class="container_contacts">
 									<div class="container_ctcs">
