technical skills added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#one_and_half">Technical Skills</a></li>
 						<li><a href="#two">Education & Experience</a></li>
 						<li><a href="#three">Portfolio</a></li>
 						<li><a href="#four">Contact</a></li>
@@ -79,7 +80,14 @@
 									</ul> -->
 								</div>
 							</section>
-
+							<section id="one_and_half">
+								<div class="container">
+									<h3>Technical Skills</h3>
+									<div>
+										<img class="languages" src="./images/languages.gif" alt="languages" style="visibility: visible; animation-name: fadeInRight; animation-duration: 1s; animation-fill-mode: both;"/>
+									</div>
+								</div>
+							</section>
 						<!-- Three -->
 							<section id="two">
 								<div class="container">
@@ -87,11 +95,11 @@
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="https://t4.ftcdn.net/jpg/02/09/90/27/240_F_209902781_ckfIW19o7zcwRvO6giRUZOHVv2rbv3SO.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://cdn-icons-png.flaticon.com/512/2913/2913185.png" alt="" /></a>
 											<div class="inner">
-												<h4>Institute of Hospitality Management, Prague, Czech Republic</h4>
-												<p>2008 - 2012</p>
-												<p>Bachelor of Science, Hospitality Management</p>
+												<h4>App Academy</h4>
+												<p>2021 - 2022</p>
+												<p>1000-hour immersive full-stack web development intensive with less than 3% acceptance rate</p>
 											</div>
 										</article>
 										<article>
@@ -103,11 +111,11 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://cdn-icons-png.flaticon.com/512/2913/2913185.png" alt="" /></a>
+											<a href="#" class="image"><img src="https://t4.ftcdn.net/jpg/02/09/90/27/240_F_209902781_ckfIW19o7zcwRvO6giRUZOHVv2rbv3SO.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>App Academy</h4>
-												<p>2021 - 2022</p>
-												<p>Full Stack Web Development</p>
+												<h4>Institute of Hospitality Management, Prague, Czech Republic</h4>
+												<p>2008 - 2012</p>
+												<p>Bachelor of Science, Hospitality Management</p>
 											</div>
 										</article>
 									</div>
@@ -125,10 +133,10 @@
 												<p>Travelgram is an Instagram inspired appication. It is a social media platform where users can share their posts from their adventures and follow their friends.</p>
 												<p>React / Redux / Flask</p>
 												<h5>Github</h5>
-												<a href="https://apptravelgram.herokuapp.com/">apptravelgram.herokuapp.com/</a>
+												<a href="https://github.com/Code-rina/Travelgram" target="_blank" rel="noopener noreferrer">github.com/Code-rina/Travelgram</a>
 												<p></p>
 												<h5>Live</h5>
-												<a href="https://github.com/Code-rina/Travelgram">github.com/Code-rina/Travelgram</a>
+												<a href="https://apptravelgram.herokuapp.com/" target="_blank" rel="noopener noreferrer">apptravelgram.herokuapp.com/</a>
 											</div>
 										</article>
 										<article>
@@ -138,10 +146,10 @@
 												<p>Moodify is a Spotify inspired application where users can listen to favorite playlists based on their mood.</p>
 												<p>React / Redux / Flask</p>
 												<h5>Github</h5>
-												<a href="https://appmoodify.herokuapp.com/">appmoodify.herokuapp.com/</a>
+												<a href="https://github.com/sbyri97/moodify_gp10" target="_blank" rel="noopener noreferrer">github.com/sbyri97/moodify_gp10</a>
 												<p></p>
 												<h5>Live</h5>
-												<a href="https://github.com/sbyri97/moodify_gp10">github.com/sbyri97/moodify_gp10</a>
+												<a href="https://appmoodify.herokuapp.com/" target="_blank" rel="noopener noreferrer">appmoodify.herokuapp.com/</a>
 											</div>
 										</article>
 										<article>
@@ -151,10 +159,10 @@
 												<p>BnBSF is an Airbnb influenced app. It is a booking place for people where they can rent a home instead of a hotel for more unique and home-like experience.</p>
 												<p>React / Redux / Express</p>
 												<h5>Github</h5>
-												<a href="https://bnbsf.herokuapp.com/">bnbsf.herokuapp.com/</a>
+												<a href="https://github.com/code-rina/BnB_SF-Week_16_Solo_Project" target="_blank" rel="noopener noreferrer">github.com/code-rina/BnB_SF-Week_16_Solo_Project</a>
 												<p></p>
 												<h5>Live</h5>
-												<a href="https://github.com/code-rina/BnB_SF-Week_16_Solo_Project">github.com/code-rina/BnB_SF-Week_16_Solo_Project</a>
+												<a href="https://bnbsf.herokuapp.com/" target="_blank" rel="noopener noreferrer">bnbsf.herokuapp.com/</a>
 											</div>
 										</article>
 										<article>
@@ -164,10 +172,10 @@
 												<p>goodMovies, a goodReads clone, is a movie database platform, where users can discover new movies by genre. Users can rate, and leave comments about their favorite movies.</p>
 												<p>Javascript / Pug / Express</p>
 												<h5>Github</h5>
-												<a href="https://github.com/BrandonCope/g13_goodMovies">github.com/BrandonCope/g13_goodMovies</a>
-												<p></p>
+												<a href="https://github.com/BrandonCope/g13_goodMovies" target="_blank" rel="noopener noreferrer">github.com/BrandonCope/g13_goodMovies</a>
 												<h5>Live</h5>
-												<a href="https://good-movies-13.herokuapp.com/">good-movies-13.herokuapp.com</a>
+												<a href="https://good-movies-13.herokuapp.com/" target="_blank" rel="noopener noreferrer">good-movies-13.herokuapp.com</a>
+												<p></p>
 											</div>
 										</article>
 									</div>
@@ -180,7 +188,7 @@
 									<h3>Contact Me</h3>
 									<p>Looking for a software engineer? Here I am.</p>
 									<p></p>
-									<a class="resume" href="https://drive.google.com/file/d/19SZUfr7i9MmVS8xCo7NJOc7-SHgxNfcb/view?usp=sharing" target="_blank" rel="noopener noreferrer">•Resume•</a>
+									<a class="resume" href="https://drive.google.com/file/d/1MUzzRL4uGCF6r2cHot_6kUaHsEI_56rV/view?usp=sharing" target="_blank" rel="noopener noreferrer">•Resume•</a>
 									<p></p>
 									<div class="container_contacts">
 									<div class="container_ctcs">
