--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<title>Katerina Kreibich Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property='og:title' content='Portfolio site' />
+		<meta property='og:image' content='https://user-images.githubusercontent.com/87352324/163603321-1542af48-702a-4c33-a496-d9ab6d9fc466.png' />
+		<meta property='og:description' content='Check out my portfolio site!' />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="./images/favicon.png">
 	</head>
