--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<div>
-										<img class="languages" src="./images/languages.gif" alt="languages" style="visibility: visible; animation-name: fadeInRight; animation-duration: 1s; animation-fill-mode: both;"/>
+										<img class="languages" src="./images/languages.gif" alt="languages"/>
 									</div>
 								</div>
 							</section>
