--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#one_and_half">Technical Skills</a></li>
-						<li><a href="#two">Education & Experience</a></li>
-						<li><a href="#three">Portfolio</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#two">Technical Skills</a></li>
+						<li><a href="#three">Education & Experience</a></li>
+						<li><a href="#four">Portfolio</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -83,7 +83,7 @@
 									</ul> -->
 								</div>
 							</section>
-							<section id="one_and_half">
+							<section id="two">
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<div>
@@ -92,7 +92,7 @@
 								</div>
 							</section>
 						<!-- Three -->
-							<section id="two">
+							<section id="three">
 								<div class="container">
 									<h3>Education & Experience</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
@@ -125,7 +125,7 @@
 								</div>
 							</section>
 
-							<section id="three">
+							<section id="four">
 								<div class="container">
 									<h3>Full Stack Projects</h3>
 									<div class="features">
@@ -186,7 +186,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Looking for a software engineer? Here I am.</p>
